Implement full store & product management modules + DTO/Mapper fixes - Added StoreController, StoreService, and StoreServiceImpl - Implemented full Store entity with StoreContact and StoreStatus domain structures - Added StoreRepository for persistence and integrated store creation with authenticated users - Implemented StoreDTO and StoreMapper for clean API data transfer - Added CategoryDTO & ProductDTO updates with @NoArgsConstructor / @AllArgsConstructor for proper JSON deserialization - Standardized DTO field naming (storeId, categoryId, imageUrl) - Updated ProductMapper to correctly map imageUrl and categoryId both directions - Added validation in ProductServiceImpl for storeId and categoryId - Fixed broken Postman requests due to mismatched field names - Verified working product creation flow end-to-end (DTO → Mapper → Service → Entity → DB → Response) - Cleaned API routes and ensured consistent response structure across all modules